--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
     
     --clr-white: #FFF;
     --clr-light: #F2F2F2;
-    --clr-dark: #3D3D3D;
-    --clr-accent: #6DD0DB;
+    --clr-dark: #373741;
+    --clr-accent: #66CED9;
     
     font-size: 62.5%; 
     --fs-h1: 5rem;
